[gd_scene load_steps=12 format=3 uid="uid://mluj7u1sank4"]

[ext_resource type="Script" uid="uid://dyt4qf5j6dwry" path="res://scripts/strong_attack_effect.gd" id="1_lnee4"]
[ext_resource type="Texture2D" uid="uid://bmng5djvct3ah" path="res://assets/Fireball/fire_ball.png" id="2_awa5o"]
[ext_resource type="Texture2D" uid="uid://bdnu1r8syo304" path="res://assets/Fireball/line_fire.png" id="3_3rmpl"]
[ext_resource type="Shader" path="res://superball_glow_shader.gdshader" id="4_glow"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 15.0

[sub_resource type="Gradient" id="Gradient_1"]
offsets = PackedFloat32Array(0, 0.3, 1)
colors = PackedColorArray(1, 0.8, 0.2, 1, 1, 0.4, 0, 1, 1, 0.2, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture_1"]
gradient = SubResource("Gradient_1")

[sub_resource type="Curve" id="Curve_1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1"]
curve = SubResource("Curve_1")

[sub_resource type="ParticleProcessMaterial" id="ParticlesMaterial_1"]
direction = Vector3(0, 0, -1)
spread = 20.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 0.0
scale_curve = SubResource("CurveTexture_1")
color_ramp = SubResource("GradientTexture_1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_glow"]
shader = ExtResource("4_glow")
shader_parameter/fireball_texture = ExtResource("2_awa5o")
shader_parameter/glow_color = Color(0.2, 1, 0.3, 1)
shader_parameter/blur_amount = 0.5

[node name="strong_attack_effect" type="Area2D"]
script = ExtResource("1_lnee4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="GlowSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 1)
texture = ExtResource("2_awa5o")
scale = Vector2(0.35, 0.35)
material = SubResource("ShaderMaterial_glow")

[node name="FireballSprite" type="Sprite2D" parent="."]
modulate = Color(0.13725491, 1, 1, 1)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_awa5o")

[node name="Light2D" type="PointLight2D" parent="FireballSprite"]
color = Color(1, 0.6, 0.2, 1)
energy = 2.0
texture = ExtResource("2_awa5o")
texture_scale = 0.03

[node name="TrailParticles" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.8)
amount = 30
texture = ExtResource("3_3rmpl")
lifetime = 0.3
process_material = SubResource("ParticlesMaterial_1")

[connection signal="body_entered" from="." to="." method="_on_attack_effect_body_entered"]
